<resources>
    <string name="app_name">LEAP</string>
    <string name="todo">TODO</string>
    <string name="item">Item</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="show">show</string>
    <string name="reset">初期化</string>
    <string name="resetText">チェックリストの初期化</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="main_words_test">単語テスト</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->

    <!-- TODO: Remove or change this placeholder text -->
</resources>
